--- a/README
+++ b/README
@@ -10,11 +10,18 @@ p1d_rfid
 Linux command line tool for Priority 1 Design rfid reader/writer
 
 
+idrw_linux
+==========
+
+Linux command line tool for another China 125kHz rfid reader/writer usb based one (ffff:0035)
+
+
 Building
 ========
 
 gcc rfid_app.c -o rfid_app
 gcc p1d_rfid.c -o p1d_rfid
+gcc -o idrw_linux idrw_linux.c -I/usr/local/include -L. -lnsl -lm -lc -L/usr/local/lib -lusb-1.0
 
 Usage
 =====
